# api/swagger.yaml
@@ -34,18 +34,6 @@ paths:
       operationId: "booksGET"
       produces:
       - "application/json"
-      parameters:
-      - name: "offset"
-        in: "query"
-        description: "Pagination offset. Default is 0."
-        required: false
-        type: "integer"
-      - name: "limit"
-        in: "query"
-        description: "Maximum number of items per page. Default is 20 and cannot exceed\
-          \ 500."
-        required: false
-        type: "integer"
       responses:
         200:
           description: "A collection of Books"
@@ -55,6 +43,25 @@ paths:
               $ref: "#/definitions/Book"
         404:
           description: "Unexpected error"
+      x-swagger-router-controller: "Book"
+  /bestSeller:
+    get:
+      tags:
+      - "book"
+      summary: "Find all book by Genre"
+      description: "Return a list of book"
+      operationId: "getBestSeller"
+      produces:
+      - "application/json"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/Book"
+        400:
+          description: "Invalid Name supplied"
+        404:
+          description: "Book not found"
       x-swagger-router-controller: "Book"
   /bookId/{bookId}:
     get:
@@ -431,6 +438,51 @@ paths:
           description: "Invalid ID supplied"
         404:
           description: "Author not found"
+      x-swagger-router-controller: "Author"
+  /allAuthors:
+    get:
+      tags:
+      - "author"
+      summary: "Find all authros"
+      description: "Returns all authors"
+      operationId: "getAllAuthors"
+      produces:
+      - "application/json"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/Author"
+        400:
+          description: "Invalid Name supplied"
+        404:
+          description: "Author not found"
+      x-swagger-router-controller: "Author"      
+  /booksByIdAuthor/{authorId}:
+    get:
+      tags:
+      - "author"
+      summary: "Find books by ID"
+      description: "Returns books"
+      operationId: "getBooksByIdAuthor"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "authorId"
+        in: "path"
+        description: "ID of author"
+        required: true
+        type: "integer"
+        format: "int64"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/Author"
+        400:
+          description: "Invalid ID supplied"
+        404:
+          description: "Book not found"
       x-swagger-router-controller: "Author"
   /carts:
     get:
