# controllers/Book.js
@@ -4,9 +4,17 @@ var utils = require('../utils/writer.js');
 var Book = require('../service/BookService');
 
 module.exports.booksGET = function booksGET(req, res, next) {
-  var offset = req.swagger.params['offset'].value;
-  var limit = req.swagger.params['limit'].value;
-  Book.booksGET(offset, limit)
+  Book.booksGET()
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
+};
+
+module.exports.getBestSeller = function getBestSeller(req, res, next) {
+  Book.getBestSeller()
     .then(function (response) {
       utils.writeJson(res, response);
     })
